fix: icon, description alignment

--- a/src/components/reusable/notification/notification.scss
+++ b/src/components/reusable/notification/notification.scss
@@ -178,8 +178,8 @@ kyn-card.notification-normal::part(card-wrapper) {
 
 .notification-inline.notification-default .notification-description,
 .notification-toast.notification-default .notification-description {
-  padding-top: 0px;
-  padding-left: 0px;
+  padding-top: 11px;
+  padding-left: 0;
   color: var(--kd-color-text-level-primary);
 }
 
